...
            value = searchText,
            onValueChange = updateSearchText,
            modifier = Modifier
                .weight(1f)
                .padding(horizontal = 4.dp)
                .background(MaterialTheme.colorScheme.background, RoundedCornerShape(100))
                .testTag("searchBox"),
            placeholder = {
                Text(text = stringResource(R.string.search_ellipsis))
            },
            trailingIcon = {
                IconButton(
                    modifier = Modifier.testTag("searchButton"),
                    onClick = onSearchClicked
                ) {
                    Icon(
                        imageVector = Icons.Rounded.Search,
                        tint = MaterialTheme.colorScheme.onBackground,
                        contentDescription = stringResource(R.string.search)
...
