...
        AsyncImage(
            model = imageUrl,
            contentDescription = contentDescription,
            modifier = modifier
                .fillMaxWidth()
                .aspectRatio(1f)
                .testTag("artworkImage")
        )
    } else {
        Text(
            text = stringResource(R.string.no_image_available),
            style = MaterialTheme.typography.bodyMedium,
            textAlign = TextAlign.Center,
...
